Added event acknowledgements

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
             <input name="message" placeholder="Chat Messages">
             <button id="sendMessage">Send Message</button>
         </form>
-
+        <button id="send-location">Send Location</button>
+        
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
