--- a/public/chat.html
+++ b/public/chat.html
@@ -15,7 +15,7 @@
                 
                 <div class="compose">
                     <form id="message-form">
-                        <input name="message" placeholder="Chat Messages">
+                        <input name="message" placeholder="Chat Messages" required autocomplete="off">
                         <button id="sendMessage">Send Message</button>
                     </form>
                     <button id="send-location">Send Location</button>
@@ -26,7 +26,7 @@
         <script id="message-template" type="text/html">
             <div class="message"> 
                 <p>
-                    <span class="message__name">Some user name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>{{message}}</p>
@@ -36,7 +36,7 @@
         <script id="location-message-template" type="text/html">
             <div class="message"> 
                 <p>
-                    <span class="message__name">Some user name</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p><a href="{{mapsUrl}}" target="_blank">My current location</a></p>
