Fixed send message button issue and minor code clean ups

--- a/public/chat.html
+++ b/public/chat.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Chat App</title>
-        <link rel="icon" href="/img.favicon.png">
+        <link rel="icon" href="/img/favicon.png">
         <link rel="stylesheet" href="/css/styles.min.css">
     </head>
+
     <body>
         <div class="chat">
             <div id="sidebar" class="chat__sidebar">
@@ -16,7 +17,7 @@
                 <div class="compose">
                     <form id="message-form">
                         <input name="message" placeholder="Chat Messages" required autocomplete="off">
-                        <button id="sendMessage">Send Message</button>
+                        <button>Send Message</button>
                     </form>
                     <button id="send-location">Send Location</button>
                 </div>
