--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Chat App</title>
-        <link rel="icon" href="/img.favicon.png">
+        <link rel="icon" href="/img/favicon.png">
         <link rel="stylesheet" href="/css/styles.min.css">
     </head>
+    
     <body>
         <div class="centered-form">
             <div class="centered-form__box">
